@@ -1,22 +1,63 @@
 package com.java11.addedfeatures;
 
-import java.net.URI;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.*;
 import java.net.http.HttpClient;
 //import java.net.http.HttpConnectTimeoutException;
 import java.net.http.HttpResponse;
 import java.net.http.HttpRequest;
 
 public class HttpDemo {
+    private static HttpURLConnection connection;
+
     public static void main(String[] args) {
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create("https://github.com/mulu2035/testrepo2")).build();
-        client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                .thenApplyAsync(HttpResponse::body).thenAccept(System.out::println).join();
+        BufferedReader reader;
+        String line;
+        StringBuffer responseContent = new StringBuffer();
+        try {
+            URL url = new URL("https://jsonplaceholder.typicode.com/albums");
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setConnectTimeout(5000);
+            connection.setReadTimeout(5000);
+            int status = connection.getResponseCode();
+            //System.out.println(status);
+            if (status > 299) {
+                reader = new BufferedReader(new InputStreamReader(connection.getErrorStream()));
+                while ((line = reader.readLine()) != null) {
+                    responseContent.append(line);
+                }
+                reader.close();
+            } else {
+                reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                while ((line = reader.readLine()) != null) {
+                    responseContent.append(line);
+                }
+                reader.close();
+
+
+            }
+            System.out.println(responseContent.toString());
+
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("https://jsonplaceholder.typicode.com/albums")).build();
+            client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                    .thenApplyAsync(HttpResponse::body).thenAccept(System.out::println).join();
+
+
+        } catch (ProtocolException e) {
+            e.printStackTrace();
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }finally {
+            connection.disconnect();
+        }
 
 
     }
-    //public static String parse(String responseBody){
-
-
 }
